# atm-controller

./: CMakeLists.txt  README.md
include/: Controller.hpp  Interfaces.hpp  Result.hpp  TransactionManager.hpp
src/: Controller.cpp
tests/: README.md  banking_tests.cpp  card_tests.cpp  exception_tests.cpp  test_atm.cpp  test_framework.cpp  test_framework.hpp  test_runner.cpp  transaction_tests.cpp
tests/fakes/: FakeBank.hpp  FakeCardReader.hpp  FakeCashBin.hpp
